# dallen-rockets

./: Cargo.toml  README.md  do-clippy
canfd-ethernet-transceiver/lib/FlexCAN_T4_Custom/: FlexCAN_T4.h  FlexCAN_T4FDTimings.tpp
canfd-ethernet-transceiver/src/: main.cpp
ctrl-send/: Cargo.toml
ctrl-send/src/: main.rs
ctrl-view/: Cargo.toml  view.py
ctrl-view/src/: display.rs  main.rs  record.rs  recv.rs
ecu/: Cargo.toml
ecu/src/: igniter.rs  lib.rs  record.rs
ecu/tests/: ecu.rs  igniter_states_test.rs  packet_tests.rs
hal/: Cargo.toml
hal/src/: comms_hal.rs  comms_mock.rs  ecu_hal.rs  ecu_mock.rs  lib.rs
hal/src/comms_hal/: comms_canfd_hal.rs  comms_ethernet_hal.rs
hal/tests/: comms_hal.rs
mcu/stm32l412-ecu-ctrl/: Cargo.toml  do-clippy  memory.x
mcu/stm32l412-ecu-ctrl/src/: ecu_hardware.rs  main.rs
mcu/teensy41-ecu/: Cargo.toml  build  do-clippy  teensy41-ecu.hex
mcu/teensy41-ecu/src/: comms.rs  ecu_hardware.rs  logging.rs  main.rs
mcu/teensy41-ecu/src/comms/: receive.rs  transfer.rs
