[package]
name = "hal"
version = "0.1.0"
authors = ["David Allen <19dallen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }
postcard = "0.7.0"
nb = "1.0.0"
