[package]
name = "teensy41-ecu"
version = "0.1.0"
authors = ["DavidTheFighter <dallen.19@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
log = "0.4.11"
teensy4-panic = "0.2.0"
nb = "1.0.0"

[dependencies.teensy4-bsp]
version = "0.2"
features = ["rt"]

[dependencies.hal]
path = "../../hal"

[dependencies.ecu]
path = "../../ecu"

[dependencies.teensy4-canfd]
git = "https://github.com/DavidTheFighter/teensy4-canfd.git"

[dependencies.ringbuffer]
version = "0.7.1"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0